@@ -3,7 +3,7 @@ fixtures:
   repositories:
     augeasproviders_core: https://github.com/simp/augeasproviders_core
     augeasproviders_grub: https://github.com/simp/augeasproviders_grub
-    stdlib: "https://github.com/puppetlabs/puppetlabs-stdlib.git"
-    simplib: "https://github.com/simp/pupmod-simp-simplib.git"
+    stdlib: https://github.com/puppetlabs/puppetlabs-stdlib
+    simplib: https://github.com/simp/pupmod-simp-simplib
   symlinks:
     fips: "#{source_dir}"
