@@ -1,9 +1,0 @@
-# Drop all Requires, Obsoletes, and Provides statements in here
-Requires: pupmod-puppetlabs-stdlib < 5.0.0-0
-Requires: pupmod-puppetlabs-stdlib >= 4.13.1-0
-Requires: pupmod-simp-simplib >= 3.1.0-0
-Requires: pupmod-simp-simplib < 4.0.0-0
-Requires: pupmod-herculesteam-augeasproviders_core < 3.0.0-0
-Requires: pupmod-herculesteam-augeasproviders_core >= 2.1.1-0
-Requires: pupmod-herculesteam-augeasproviders_grub < 4.0.0-0
-Requires: pupmod-herculesteam-augeasproviders_grub >= 2.3.1-0
