@@ -23,6 +23,8 @@ class fips (
   Boolean $aesni   = $::fips::params::aesni
 ) inherits fips::params {
 
+  simplib::assert_metadata($module_name)
+
   case $facts['os']['family'] {
     'RedHat': {
       $fips_kernel_value = $enabled ? {
@@ -67,7 +69,7 @@ class fips (
           notify => Exec['dracut_rebuild'];
 
         'fipscheck':
-          ensure => latest
+          ensure => 'latest'
       }
 
       if $aesni {
@@ -86,7 +88,9 @@ class fips (
         }
       }
 
-      reboot_notify { 'fips': }
+      reboot_notify { 'fips':
+        reason => 'The status of the fips kernel parameter has changed'
+      }
 
       # If the NSS and dracut packages don't stay reasonably in sync, your system
       # may not reboot.
@@ -95,11 +99,9 @@ class fips (
       exec { 'dracut_rebuild':
         command     => '/sbin/dracut -f',
         subscribe   => Package['nss'],
-        refreshonly => true
+        refreshonly => true,
+        notify      => Reboot_notify['fips'];
       }
-    }
-    default : {
-      fail("Only the RedHat family is supported by the ${module_name} module at this time.")
     }
   }
 }
