@@ -1,22 +1,22 @@
 HOSTS:
-  el6:
+  oel6:
     roles:
       - default
       - master
       - client
     platform:   el-6-x86_64
-    box:        centos/6
+    box:        elastic/oel-6-x86_64
     hypervisor: vagrant
     yum_repos:
       epel:
         mirrorlist: 'https://mirrors.fedoraproject.org/metalink?repo=epel-6&arch=$basearch'
         gpgkeys:
           - https://getfedora.org/static/0608B895.txt
-  el7:
+  oel7:
     roles:
       - client
-    platform: el-7-x86_64
-    box: centos/7
+    platform:   el-7-x86_64
+    box:        elastic/oel-7-x86_64
     hypervisor: vagrant
     yum_repos:
       epel:
